Fix player on small screens

--- a/player.css
+++ b/player.css
@@ -1,3 +1,23 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+#achso_player.acp-inline {
+    height: 90vh;
+}
+
+#achso_embed_player.acp-inline {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+}
+
+.acp-force-hidden-no-layout {
+    display: none !important;
+}
+
 .acp-noselect {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
